--- a/mallet/preview.html
+++ b/mallet/preview.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/mallet/css/style.css?v=0.0.2.4825"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/mallet/css/style.css?v=0.0.2.927"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <main class="_app __fadein" id="app">
@@ -186,14 +186,14 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 <p>Use HTML syntax to render the details and summary block.</p>
 
 <details>
-<summary>Create a collapsible section of content. <i>(click for more)</i></summary>
+<summary>Collapsible content. <i>(click for more)</i></summary>
 <div class="details">
 <p class="text-grey text-justify">Ah, the mighty details and summary block, a collapsible accordion of destiny where content hides like a shy turtle until poked by the click of curiosity. It is the digital equivalent of whispering, “psst, wanna see something cool?” and then rolling out a red carpet of hidden paragraphs, secret snippets, or the occasional diagram that nobody asked for. The summary is the bouncer at the door, deciding whether the reader gets a glimpse inside or stays staring at the title forever, while details hoards all the juicy stuff like a dragon sitting on its markdown gold.</p>
 </div>
 </details>
 
 <details class="box ba">
-<summary>Style them with <code>box.ba</code> wrappers. <i>(click for more)</i></summary>
+<summary>Style with <code>box.ba</code>. <i>(click for more)</i></summary>
 <div class="details">
 <p class="text-grey text-justify">This block expands like curtains on opening night, then folds back up as if nothing ever happened, gaslighting your memory of what you just saw. Authors toss long-winded explanations, secret Easter eggs, or poorly formatted cat ASCII art inside it, knowing only the brave will click. In its most chaotic form, the details block nests within itself, collapsing collapsibles within collapsibles until the reader spirals into an abyss of disclosure toggles, wondering whether the summary is summary enough to summarize the summaries.</p>
 </div>
@@ -477,6 +477,6 @@ with 2 space or 4 space indentation. <a href="#fnref:3" class="reversefootnote" 
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.4825"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.927"></script>
   </body>
 </html>
