--- a/core/index.html
+++ b/core/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.1648"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.2043"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -16,8 +16,7 @@
         <div class="_layout">
           <header class="_header">
             <div class="_layout">
-              <div class="_logo"><a href="/dove">Dove</a>
-              </div>
+              <div class="_logo"><a href="/dove">Dove</a></div>
             </div>
           </header>
           <nav class="_nav">
@@ -63,12 +62,10 @@
                   </svg></i></i></a></div>
         </div>
       </div><!-- custom-body -->
-      <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span>
-      </div>
-      <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
-      </div>
+      <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span></div>
+      <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a></div>
       <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-      <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.1648"></script>
+      <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.2043"></script>
     </div>
   </body>
 </html>
