--- a/core/index.html
+++ b/core/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.2511.2443"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?r=2511.01.6554"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -38,7 +38,41 @@
           </nav>
           <main class="_main">
             <article class="_article _layout _960">
-              <h1>Home</h1>
+              <style>
+                .hero-box-2 {
+                  margin:.5rem 0;
+                  padding: 1px 2rem 3rem;
+                  background: linear-gradient(45deg, #37b4aa, #b05eef, transparent);
+                  color: #fff;
+                }
+                .hero-box-2 hr { border-color: #cdb8e3 }
+                .hero-box-2 .site-description {
+                  margin-left:5.3rem;
+                  font-weight: 300;
+                  font-size: 1.1em;
+                  color: #000;
+                }
+                ._dark .hero-box-2 .site-description { color: #fff }
+              </style>
+              <div class="hero-box-2 box">
+                <h1 id="_hero-title">⚒️ Heroic Title</h1>
+                <p class="site-description">Your site's description or mission statement.</p>
+              </div>
+              <hr/>
+              <style>
+                .hero-box-1 { padding:0 }
+                .hero-box-1 .site-description {
+                  margin-left:5.3rem;
+                  font-weight: 300;
+                  font-size: 1.1em;
+                }
+                .hero-box-1 .hero-hr { margin-top:45px }
+              </style>
+              <div class="hero-box-1 box">
+                <h1 id="_hero-title">⚒️ Heroic Title</h1>
+                <p class="site-description">Your site's description or mission statement.</p>
+                <hr class="hero-hr"/>
+              </div>
               <p><code>// content for : Home</code></p>
             </article>
           </main>
@@ -63,9 +97,9 @@
         </div>
       </div><!-- custom-body -->
       <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span></div>
-      <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a></div>
+      <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/dove">✨ Made with Dove</a></div>
       <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-      <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.2511.2443"></script>
+      <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.01.6554"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
       <script>anchors?.add();</script>
     </div>
