--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?r=2511.01.1803"/>
+    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?r=2511.01.5820"/>
     <style>._nav { display:none !important }</style>
     <style>h1.hero { font-family: 'Arial',system-ui,sans-serif }</style><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
@@ -27,17 +27,21 @@
             <main class="_main">
               <article class="_article _layout">
                 <h1 class="hero">🕊️ Dove is a theme development project.</h1>
-                <pre class="scrollable highlight"><b class="text-gray"># _config.pug</b>
-site_title           : Dove
-site_description     : Dove is a theme development project.
-site_url             : <a class="_no_u" href="/dove">/dove</a>
-home_url             : <a class="_no_u" href="/dove">/dove</a>
-source_url           : <a class="_no_u" href="https://github.com/techie-joe/dove" target="_edit">https://github.com/techie-joe/dove</a>
-version              : 0.0.2
-revision             : 2511.01.1803
-ghost                : bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv
+                <pre class="scrollable highlight" style="max-height:300px"><b class="text-gray"># _config.pug</b>
+version      : 0.0.2
+revision     : 2511.01.5820
+title        : Dove
+description  : Dove is a theme development project.
+author       : Techie Joe
+year         : 2025
+base_url     : <a class="_no_u" href="/dove">/dove</a>
+home_url     : <a class="_no_u" href="/dove">/dove</a>
+ghost        : bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv
+
 google_analytics     : (undefined)
-cloudflare_analytics : (undefined)</pre>
+cloudflare_analytics : (undefined)
+
+source_url   : <a class="_no_u" href="https://github.com/techie-joe/dove" target="_edit">https://github.com/techie-joe/dove</a></pre>
                 <nav>
                   <p>
 <a href="https://techie-joe.github.io/dove/md">Dove.md</a>
@@ -138,7 +142,7 @@ cloudflare_analytics : (undefined)</pre>
     <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span></div>
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/dove">✨ Made with Dove</a></div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.01.1803"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.01.5820"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
     <script>anchors?.add();</script>
   </body>
