--- a/mallet/index.html
+++ b/mallet/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/mallet/css/style.css?r=2511.01.7443"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/mallet/css/style.css?r=2511.01.2103"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <main class="_app __fadein" id="_main">
@@ -39,6 +39,7 @@
         </nav>
         <article class="_article">
           <style>
+            .hero-box-2 #_hero-title { margin-left:1.6em;text-indent:-1.7em }
             .hero-box-2 {
               margin:.5rem 0;
               padding: 1px 2rem 3rem;
@@ -60,6 +61,7 @@
           </div>
           <hr/>
           <style>
+            .hero-box-1 #_hero-title { margin-left:1.6em;text-indent:-1.7em }
             .hero-box-1 { padding:0 }
             .hero-box-1 .site-description {
               margin-left:5.3rem;
@@ -91,7 +93,7 @@
       <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span></div>
       <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/dove">✨ Made with Dove</a></div>
       <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-      <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.01.7443"></script>
+      <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.01.2103"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
       <script>anchors?.add();</script>
     </main>
