--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html class="_prime_layout" lang="en-US"><!-- path   : index.html -->
-  <!-- layout : pugs/prime -->
+  <!-- layout : dove/pugs/prime -->
   <head>
     <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
     <title>Index | Dove</title><!-- End Jekyll SEO tag -->
@@ -8,9 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?r=2511.01.6704"/>
+    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?r=2511.01.6057"/>
     <style>._nav { display:none !important }</style>
-    <style>h1.hero { font-family: 'Arial',system-ui,sans-serif }</style><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <style>h1.hero { font-family: 'Arial',system-ui,sans-serif }</style><!-- layout_head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -29,7 +29,7 @@
                 <h1 class="hero">🕊️ Dove is a theme development project.</h1>
                 <pre class="scrollable highlight" style="max-height:213px"><b class="text-gray"># _config.pug</b>
 version      : 0.0.2
-revision     : 2511.01.6704
+revision     : 2511.01.6057
 title        : Dove
 description  : Dove is a theme development project.
 author       : Techie Joe
@@ -150,11 +150,11 @@ source_url   : https://github.com/techie-joe/dove</pre>
                   </svg></i></i></a></div>
         </div>
       </div>
-    </div><!-- custom-body -->
+    </div>
     <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span></div>
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/dove">✨ Made with Dove</a></div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.01.6704"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.01.6057"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
     <script>anchors?.add();</script>
   </body>
